WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43267
SVGScriptElement doesn't execute when ENABLE(XHTMLMP) is on
https://bugs.webkit.org/show_bug.cgi?id=43267
Summary
SVGScriptElement doesn't execute when ENABLE(XHTMLMP) is on
Yong Li
Reported
2010-07-30 11:54:06 PDT
When ENABLE(XHTMLMP) is on, the code patch is triggered. #if ENABLE(XHTMLMP) if (!scriptElement->shouldExecuteAsJavaScript()) m_doc->setShouldProcessNoscriptElement(true); else #endif but SVGScriptElement::shouldExecuteAsJavaScript() just return false. It should return m_data.shouldExecuteAsJavaScript() as HTMLScriptElement does.
Attachments
the patch
(1.67 KB, patch)
2010-07-30 12:40 PDT
,
Yong Li
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yong Li
Comment 1
2010-07-30 12:40:46 PDT
Created
attachment 63093
[details]
the patch
WebKit Commit Bot
Comment 2
2010-07-30 14:15:26 PDT
Comment on
attachment 63093
[details]
the patch Clearing flags on attachment: 63093 Committed
r64373
: <
http://trac.webkit.org/changeset/64373
>
WebKit Commit Bot
Comment 3
2010-07-30 14:15:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug