2010-07-30  Yong Li  <yoli@rim.com>

Reviewed by Darin Adler.

        Implement SVGScriptElement::shouldExecuteAsJavaScript() otherwise
        SVGScriptElement cannot run when XHTMLMP is enabled.
        https://bugs.webkit.org/show_bug.cgi?id=43267

        No test needed, because it fails all SVG <script> tests when XHTMLMP is on.

        * svg/SVGScriptElement.cpp:
        (WebCore::SVGScriptElement::shouldExecuteAsJavaScript):
        * svg/SVGScriptElement.h:

Canonical link: https://commits.webkit.org/55196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64373 268f45cc-cd09-0410-ab3c-d52691b4dbfc