WebCore/svg/SVGScriptElement.h
@@ -56,7 +56,7 @@ namespace WebCore {
 
         virtual void addSubresourceAttributeURLs(ListHashSet<KURL>&) const;
 
-        virtual bool shouldExecuteAsJavaScript() const { return false; }
+        virtual bool shouldExecuteAsJavaScript() const;
 
     protected:
         virtual bool haveLoadedRequiredResources();
